Replace deprecated 'new Short(int)' occurrences with 'Short.valueOf(short)'
Signed-off-by: Koen Aers <koen.aers@gmail.com>